--- a/wefo.html
+++ b/wefo.html
@@ -6,6 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <title>WEFO</title>
     <link rel="stylesheet" href="styles/app.css">
+    <link rel="icon" href="favicon-016x016.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="favicon-024x024.png" sizes="24x24" type="image/png">
+    <link rel="icon" href="favicon-032x032.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="favicon-048x048.png" sizes="48x48" type="image/png">
+    <link rel="icon" href="favicon-064x064.png" sizes="64x64" type="image/png">
+    <link rel="icon" href="favicon-096x096.png" sizes="96x96" type="image/png">
+    <!-- iOS - lower-resolution screens. -->
+    <link rel="apple-touch-icon" href="apple-touch-icon-120x120.png" sizes="120x120" type="image/png">
+    <!-- iOS - higher-resolution screens. -->
+    <link rel="apple-touch-icon" href="apple-touch-icon-180x180.png" sizes="180x180" type="image/png">
+    <!-- Android - lower-resolution screens. -->
+    <link rel="icon" href="favicon-128x128.png" sizes="128x128" type="image/png">
+    <!-- Android - higher-resolution screens. -->
+    <link rel="icon" href="favicon-192x192.png" sizes="192x192" type="image/png">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
